adicionar novas informações

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="overlay"></div>
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt=""></a>
+        <a href="index.html" class="navbar-brand"><img src="img/logo.png" style="width: 15%;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
           <i class="lni-menu"></i>
@@ -57,11 +57,14 @@
       <div class="row space-100">
         <div class="col-lg-7 col-md-12 col-xs-12">
           <div class="contents">
-            <h2 class="head-title">Spotted++ <br> Um novo jeito de ficar ligado</h2>
+            <div>
+              <img src="img/spottedapp.png" style="width: 55%;">
+            </div>
+            <h2 class="section-title wow fadeIn animated">Uma nova forma de ficar conectado</h2>
             <p>
-              O Spotted++ é um aplicativo para dispositivos Android (5.0+) que permite que o usuário
+              O Spotted++ é um aplicativo desenvolvido para dispositivos Android (5.0+) onde permite que o usuário
               envie spotteds para os alunos da UFCG, confira quais eventos acadêmicos estão rolando, fique informado
-              sobre os acontecimentos internos e ainda sobre o que acontece de bom nos finais de semana
+              sobre os acontecimentos internos da instituição e ainda sobre o que acontece de bom nos finais de semana da região
             </p>
             <div class="header-button">
               <a href="#app-features" class="btn btn-border-filled">Saiba mais</a>
@@ -80,7 +83,7 @@
   <!-- Header Section End -->
 
   <!-- features Section Start -->
-  <div id="app-features" class="section">
+  <div id="app-features" class="section" style="background: white;">
     <div class="container">
       <div class="section-header">
         <p class="btn btn-subtitle wow fadeInDown" data-wow-delay="0.2s">features</p>
@@ -90,8 +93,9 @@
         <div class="col-lg-4 col-md-12 col-xs-12">
           <div class="content-left text-right">
             <div class="box-item left">
-              <span class="icon">
-                <i class="lni-leaf"></i>
+              <span class="icon" style="background: white;">
+                <img src="https://raw.githubusercontent.com/osuniversitarios/spotted/master/assets/images/spotted.png"
+                  style="width: 100%;">
               </span>
               <div class="text">
                 <h4>User Friendly</h4>
@@ -99,8 +103,9 @@
               </div>
             </div>
             <div class="box-item left">
-              <span class="icon">
-                <i class="lni-dashboard"></i>
+              <span class="icon" style="background: white;">
+                <img src="https://raw.githubusercontent.com/osuniversitarios/spotted/master/assets/images/avisos.png"
+                  style="width: 100%;">
               </span>
               <div class="text">
                 <h4>Super Fast Speed</h4>
@@ -117,8 +122,9 @@
         <div class="col-lg-4 col-md-12 col-xs-12">
           <div class="content-right text-left">
             <div class="box-item right">
-              <span class="icon">
-                <i class="lni-shield"></i>
+              <span class="icon" style="background: white;">
+                <img src="https://raw.githubusercontent.com/osuniversitarios/spotted/master/assets/images/eventos.png"
+                  style="width: 100%;">
               </span>
               <div class="text">
                 <h4>Secure</h4>
@@ -126,8 +132,9 @@
               </div>
             </div>
             <div class="box-item right">
-              <span class="icon">
-                <i class="lni-star-filled"></i>
+              <span class="icon" style="background: white;">
+                <img src="https://raw.githubusercontent.com/osuniversitarios/spotted/master/assets/images/entretenimento.png"
+                  style="width: 100%;">
               </span>
               <div class="text">
                 <h4>Awesome Rating</h4>
@@ -191,7 +198,7 @@
     <div class="container">
       <div class="section-header">
         <p class="btn btn-subtitle wow fadeInDown" data-wow-delay="0.2s">Team</p>
-        <h2 class="section-title">Our Expert Team</h2>
+        <h2 class="section-title">Nosso time de desenvolvedores</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-xs-12">
@@ -207,7 +214,7 @@
             </div>
             <div class="team-details">
               <div class="team-inner">
-                <h4 class="team-title">Mark Parker</h4>
+                <h4 class="team-title">Bruno Meneses</h4>
                 <p>UX Consultant</p>
               </div>
             </div>
@@ -226,7 +233,7 @@
             </div>
             <div class="team-details">
               <div class="team-inner">
-                <h4 class="team-title">Jhon Deo</h4>
+                <h4 class="team-title">Caio Sanches</h4>
                 <p>Web Developer</p>
               </div>
             </div>
@@ -245,7 +252,7 @@
             </div>
             <div class="team-details">
               <div class="team-inner">
-                <h4 class="team-title">Jhon Smith</h4>
+                <h4 class="team-title">Geovane Silva</h4>
                 <p>UI/UX Designer</p>
               </div>
             </div>
@@ -264,7 +271,26 @@
             </div>
             <div class="team-details">
               <div class="team-inner">
-                <h4 class="team-title">Elina Dcruz</h4>
+                <h4 class="team-title">Hemillainy Santos</h4>
+                <p>Digital Marketer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-xs-12">
+          <div class="single-team wow fadeInUp" data-wow-delay="0.5s">
+            <div class="team-thumb">
+              <img src="img/team/team4.jpg" alt="">
+              <ul class="social-list">
+                <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
+                <li class="google-plus"><a href="#"><i class="lni-google-plus"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
+              </ul>
+            </div>
+            <div class="team-details">
+              <div class="team-inner">
+                <h4 class="team-title">Vinícius Jorge</h4>
                 <p>Digital Marketer</p>
               </div>
             </div>
@@ -288,18 +314,19 @@
           <div class="download-wrapper wow fadeInRight" data-wow-delay="0.2s">
             <div>
               <div class="download-text">
-                <h4>Download Our App From Store</h4>
-                <p>Appropriately implement one-to-one catalysts for change vis-a-vis wireless catalysts for change.
-                  Enthusiastically architect adaptive.</p>
+                <h4>Baixe o nosso app!</h4>
+                <p>
+                  e faça parte dessa comunidade!
+                </p>
               </div>
-              <a href="#" class="btn btn-common btn-effect"><i class="lni-android"></i> From PlayStore<br></a>
-              <a href="#" class="btn btn-apple"><i class="lni-apple"></i> From AppStore<br></a>
-              <br><br><br><br>
+              <a href="#" class="btn btn-common btn-effect"><i class="lni-android"></i>Download<br></a>
+              <span class="btn btn-apple"><i class="lni-apple"></i> Em Breve<br></span>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <br><br><br><br><br><br><br><br>
   </section>
   <!-- download Section Start -->
 
@@ -310,7 +337,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-            <img src="img/logo.png" alt="">
+            <img src="img/logo.png" style="width: 50%;">
             <div class="textwidget">
               <p>Appropriately implement one-to-one catalysts for change vis-a-vis wireless catalysts for change.
                 Enthusiastically architect adaptive.</p>
