adicionar novas informações

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
     <div class="overlay"></div>
     <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/logo.png" style="width: 15%;"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <i class="lni-menu"></i>
-        </button>
+        <i href="index.html" class="navbar-brand">
+          <img src="img/logo.png" style="width: 20%;">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="lni-menu"></i>
+          </button>
+        </i>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto w-100 justify-content-end">
             <li class="nav-item">
@@ -62,9 +64,10 @@
             </div>
             <h2 class="section-title wow fadeIn animated">Uma nova forma de ficar conectado</h2>
             <p>
-              O Spotted++ é um aplicativo desenvolvido para dispositivos Android (5.0+) onde permite que o usuário
+              O Spotted++ é um aplicativo desenvolvido para dispositivos Android onde permite que o usuário
               envie spotteds para os alunos da UFCG, confira quais eventos acadêmicos estão rolando, fique informado
-              sobre os acontecimentos internos da instituição e ainda sobre o que acontece de bom nos finais de semana da região
+              sobre os acontecimentos internos da instituição e ainda sobre o que acontece de bom nos finais de semana
+              da região
             </p>
             <div class="header-button">
               <a href="#app-features" class="btn btn-border-filled">Saiba mais</a>
@@ -91,15 +94,15 @@
       </div>
       <div class="row">
         <div class="col-lg-4 col-md-12 col-xs-12">
-          <div class="content-left text-right">
+          <div class="content-left text-right" style="margin-left: 5%;">
             <div class="box-item left">
               <span class="icon" style="background: white;">
                 <img src="https://raw.githubusercontent.com/osuniversitarios/spotted/master/assets/images/spotted.png"
                   style="width: 100%;">
               </span>
               <div class="text">
-                <h4>User Friendly</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing typesting industry text.</p>
+                <h4>Você no controle</h4>
+                <p>Com nosso app, você mesmo pode enviar aquela cantada para o(a) crush</p>
               </div>
             </div>
             <div class="box-item left">
@@ -108,8 +111,9 @@
                   style="width: 100%;">
               </span>
               <div class="text">
-                <h4>Super Fast Speed</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing typesting industry text.</p>
+                <h4>Informação</h4>
+                <p>Perdeu aquele doc? Buscando alguém pra dividir apê? E a bolsa, caiu ou não? Aqui você pergunta e
+                  descobre</p>
               </div>
             </div>
           </div>
@@ -120,15 +124,15 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-12 col-xs-12">
-          <div class="content-right text-left">
+          <div class="content-right text-left" style="margin-right: 5%;">
             <div class="box-item right">
               <span class="icon" style="background: white;">
                 <img src="https://raw.githubusercontent.com/osuniversitarios/spotted/master/assets/images/eventos.png"
                   style="width: 100%;">
               </span>
               <div class="text">
-                <h4>Secure</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing typesting industry text.</p>
+                <h4>Eventos acadêmicos</h4>
+                <p>Fique informado sobre os principais encontros que acontecem na região</p>
               </div>
             </div>
             <div class="box-item right">
@@ -137,8 +141,8 @@
                   style="width: 100%;">
               </span>
               <div class="text">
-                <h4>Awesome Rating</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing typesting industry text.</p>
+                <h4>Alguém disse festa?</h4>
+                <p>Aqui você tem espaço para aquela divulgação marota dos rolês</p>
               </div>
             </div>
           </div>
@@ -159,22 +163,22 @@
         <div class="touch-slider owl-carousel">
           <div class="item">
             <div class="screenshot-thumb">
-              <img class="img-fluid" src="img/screenshot/img-1.png" alt="">
+              <img class="img-fluid" src="img/screenshot/img-1.jpg" alt="">
             </div>
           </div>
           <div class="item">
             <div class="screenshot-thumb">
-              <img class="img-fluid" src="img/screenshot/img-2.png" alt="">
+              <img class="img-fluid" src="img/screenshot/img-2.jpg" alt="">
             </div>
           </div>
           <div class="item">
             <div class="screenshot-thumb">
-              <img class="img-fluid" src="img/screenshot/img-3.png" alt="">
+              <img class="img-fluid" src="img/screenshot/img-3.jpg" alt="">
             </div>
           </div>
           <div class="item">
             <div class="screenshot-thumb">
-              <img class="img-fluid" src="img/screenshot/img-4.png" alt="">
+              <img class="img-fluid" src="img/screenshot/img-4.jpg" alt="">
             </div>
           </div>
           <div class="item">
@@ -198,24 +202,23 @@
     <div class="container">
       <div class="section-header">
         <p class="btn btn-subtitle wow fadeInDown" data-wow-delay="0.2s">Team</p>
-        <h2 class="section-title">Nosso time de desenvolvedores</h2>
+        <h2 class="section-title">Desenvolvedores</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team wow fadeInUp" data-wow-delay="0.2s">
             <div class="team-thumb">
-              <img src="img/team/team1.jpg" alt="">
+              <img src="img/team/team2.jpg" alt="">
               <ul class="social-list">
-                <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="google-plus"><a href="#"><i class="lni-google-plus"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
                 <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Bruno Meneses</h4>
-                <p>UX Consultant</p>
+                <p>Mobile/Web Developer</p>
               </div>
             </div>
           </div>
@@ -223,18 +226,17 @@
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-thumb">
-              <img src="img/team/team2.jpg" alt="">
+              <img src="img/team/team1.jpg" alt="">
               <ul class="social-list">
-                <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="google-plus"><a href="#"><i class="lni-google-plus"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
                 <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Caio Sanches</h4>
-                <p>Web Developer</p>
+                <p>Mobile/Web Developer</p>
               </div>
             </div>
           </div>
@@ -242,18 +244,17 @@
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team wow fadeInUp" data-wow-delay="0.4s">
             <div class="team-thumb">
-              <img src="img/team/team3.jpg" alt="">
+              <img src="img/team/team5.jpg" alt="">
               <ul class="social-list">
-                <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="google-plus"><a href="#"><i class="lni-google-plus"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
                 <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Geovane Silva</h4>
-                <p>UI/UX Designer</p>
+                <p>Mobile/Web Developer</p>
               </div>
             </div>
           </div>
@@ -263,16 +264,15 @@
             <div class="team-thumb">
               <img src="img/team/team4.jpg" alt="">
               <ul class="social-list">
-                <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="google-plus"><a href="#"><i class="lni-google-plus"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
                 <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Hemillainy Santos</h4>
-                <p>Digital Marketer</p>
+                <p>Mobile/Web Developer</p>
               </div>
             </div>
           </div>
@@ -280,18 +280,17 @@
         <div class="col-lg-3 col-md-6 col-xs-12">
           <div class="single-team wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-thumb">
-              <img src="img/team/team4.jpg" alt="">
+              <img src="img/team/team3.jpg" alt="">
               <ul class="social-list">
-                <li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="google-plus"><a href="#"><i class="lni-google-plus"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
                 <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
               <div class="team-inner">
                 <h4 class="team-title">Vinícius Jorge</h4>
-                <p>Digital Marketer</p>
+                <p>Mobile/Web Developer</p>
               </div>
             </div>
           </div>
