adicionar redes sociais, e alterar imagens de divulgação

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <div class="col-lg-7 col-md-12 col-xs-12">
           <div class="contents">
             <div>
-              <img src="img/spottedapp.png" style="width: 55%;">
+              <img src="img/logoappbranco.png" style="width: 55%;">
             </div>
             <h2 class="section-title wow fadeIn animated">Uma nova forma de ficar conectado</h2>
             <p>
-              O Spotted++ é um aplicativo desenvolvido para dispositivos Android onde permite que o usuário
+              O Spotted++ é um aplicativo desenvolvido para dispositivos mobile onde permite que o usuário
               envie spotteds para os alunos da UFCG, confira quais eventos acadêmicos estão rolando, fique informado
               sobre os acontecimentos internos da instituição e ainda sobre o que acontece de bom nos finais de semana
               da região
@@ -101,8 +101,8 @@
                   style="width: 100%;">
               </span>
               <div class="text">
-                <h4>Você no controle</h4>
-                <p>Com nosso app, você mesmo pode enviar aquela cantada para o(a) crush</p>
+                <h4>No seu tempo</h4>
+                <p>Com nosso app, você pode enviar aquela cantada para o(a) crush em tempo real</p>
               </div>
             </div>
             <div class="box-item left">
@@ -112,15 +112,14 @@
               </span>
               <div class="text">
                 <h4>Informação</h4>
-                <p>Perdeu aquele doc? Buscando alguém pra dividir apê? E a bolsa, caiu ou não? Aqui você pergunta e
-                  descobre</p>
+                <p>Perdeu aquele doc? Buscando alguém pra dividir apê? E a bolsa, caiu ou não? Pergunta aqui</p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 col-xs-12">
           <div class="show-box">
-            <img src="img/features/app.png" alt="">
+            <img src="img/featuresapp.png" alt="">
           </div>
         </div>
         <div class="col-lg-4 col-md-12 col-xs-12">
@@ -210,9 +209,7 @@
             <div class="team-thumb">
               <img src="img/team/team2.jpg" alt="">
               <ul class="social-list">
-                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
+                <li class="linkedin"><a href="https://github.com/bruno-meneses"><i class="lni-github"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
@@ -228,9 +225,8 @@
             <div class="team-thumb">
               <img src="img/team/team1.jpg" alt="">
               <ul class="social-list">
-                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
+                <li class="linkedin"><a href="https://github.com/caiosbl"><i class="lni-github"></i></a></li>
+                <li class="linkedin"><a href="https://www.linkedin.com/in/caiobdelira/"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
@@ -246,9 +242,8 @@
             <div class="team-thumb">
               <img src="img/team/team5.jpg" alt="">
               <ul class="social-list">
-                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
+                <li class="linkedin"><a href="https://github.com/geovanens"><i class="lni-github"></i></a></li>
+                <li class="linkedin"><a href="https://www.linkedin.com/in/geovane-silva-a82425169/"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
@@ -264,9 +259,8 @@
             <div class="team-thumb">
               <img src="img/team/team4.jpg" alt="">
               <ul class="social-list">
-                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
+                <li class="linkedin"><a href="https://github.com/hemillainysantos"><i class="lni-github"></i></a></li>
+                <li class="linkedin"><a href="https://www.linkedin.com/in/hemillainy-santos-1ab65616b/"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
@@ -282,9 +276,8 @@
             <div class="team-thumb">
               <img src="img/team/team3.jpg" alt="">
               <ul class="social-list">
-                <li class="linkedin"><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-twitter-filled"></i></a></li>
-                <li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
+                <li class="linkedin"><a href="https://github.com/viniciusjps"><i class="lni-github"></i></a></li>
+                <li class="linkedin"><a href="https://www.linkedin.com/in/viniciusjps/"><i class="lni-linkedin-fill"></i></a></li>
               </ul>
             </div>
             <div class="team-details">
@@ -302,6 +295,7 @@
 
   <!-- download Section Start -->
   <section id="download">
+    <br><br><br><br><br><br><br><br>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-xs-12">
@@ -325,7 +319,7 @@
         </div>
       </div>
     </div>
-    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
   </section>
   <!-- download Section Start -->
 
