atualizar imagens e css

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         <p class="btn btn-subtitle wow fadeInDown" data-wow-delay="0.2s">Team</p>
         <h2 class="section-title">Desenvolvedores</h2>
       </div>
-      <div class="row">
-        <div class="col-lg-3 col-md-6 col-xs-12">
+      <div class="row" style="justify-content: center">
+        <div class="col-lg-2 col-md-4 col-xs-16">
           <div class="single-team wow fadeInUp" data-wow-delay="0.2s">
             <div class="team-thumb">
               <img src="img/team/team2.jpg" alt="">
@@ -220,7 +220,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-xs-12">
+        <div class="col-lg-2 col-md-4 col-xs-16">
           <div class="single-team wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-thumb">
               <img src="img/team/team1.jpg" alt="">
@@ -237,7 +237,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-xs-12">
+        <div class="col-lg-2 col-md-4 col-xs-16">
           <div class="single-team wow fadeInUp" data-wow-delay="0.4s">
             <div class="team-thumb">
               <img src="img/team/team5.jpg" alt="">
@@ -254,7 +254,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-xs-12">
+        <div class="col-lg-2 col-md-4 col-xs-16">
           <div class="single-team wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-thumb">
               <img src="img/team/team4.jpg" alt="">
@@ -271,7 +271,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-xs-12">
+        <div class="col-lg-2 col-md-4 col-xs-16">
           <div class="single-team wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-thumb">
               <img src="img/team/team3.jpg" alt="">
@@ -295,7 +295,7 @@
 
   <!-- download Section Start -->
   <section id="download">
-    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-xs-12">
@@ -319,7 +319,7 @@
         </div>
       </div>
     </div>
-    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
   <!-- download Section Start -->
 
@@ -328,48 +328,8 @@
     <!-- Footer Area Start -->
     <section class="footer-Content">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-            <img src="img/logo.png" style="width: 50%;">
-            <div class="textwidget">
-              <p>Appropriately implement one-to-one catalysts for change vis-a-vis wireless catalysts for change.
-                Enthusiastically architect adaptive.</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-            <div class="widget">
-              <h3 class="block-title">Create a Free Account</h3>
-              <ul class="menu">
-                <li><a href="#">Sign In</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Jobs</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-            <div class="widget">
-              <h3 class="block-title">Resource</h3>
-              <ul class="menu">
-                <li><a href="#">Comunnity</a></li>
-                <li><a href="#">Become a Partner</a></li>
-                <li><a href="#">Our Technology</a></li>
-                <li><a href="#">Documentation</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-            <div class="widget">
-              <h3 class="block-title">Support</h3>
-              <ul class="menu">
-                <li><a href="#">Terms & Condition</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Help</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        <img src="img/logo.png" style="max-width: 15%; height: auto;">
+        <img src="img/logoappbranco.png" style="max-width: 15%; height: auto;">
       </div>
       <!-- Copyright Start  -->
       <div class="copyright">
@@ -377,14 +337,11 @@
           <div class="row">
             <div class="col-md-12">
               <div class="site-info float-left">
-                <p>&copy; 2020 - Designed by <a href="http://uideck.com" rel="nofollow">UIdeck</a></p>
+                <p>&copy; 2018 - Designed by <a href="http://uideck.com" rel="nofollow">UIdeck</a> | Edited by Vinícius Jorge</p>
               </div>
               <div class="float-right">
                 <ul class="footer-social">
-                  <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="lni-linkedin-fill"></i></a></li>
-                  <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
+                  <li><a class="linkedin" href="https://github.com/osuniversitarios/"><i title="Github Project" class="lni-github"></i></a></li>
                 </ul>
               </div>
             </div>
