adicionar novos prints

--- a/index.html
+++ b/index.html
@@ -177,7 +177,12 @@
           </div>
           <div class="item">
             <div class="screenshot-thumb">
-              <img class="img-fluid" src="img/screenshot/img-4.jpg" alt="">
+              <img class="img-fluid" src="img/screenshot/img-4.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-14.png" alt="">
             </div>
           </div>
           <div class="item">
@@ -188,6 +193,46 @@
           <div class="item">
             <div class="screenshot-thumb">
               <img class="img-fluid" src="img/screenshot/img-6.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-15.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-8.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-9.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-7.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-16.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-10.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-11.png" alt="">
+            </div>
+          </div>
+          <div class="item">
+            <div class="screenshot-thumb">
+              <img class="img-fluid" src="img/screenshot/img-13.png" alt="">
             </div>
           </div>
         </div>
@@ -337,7 +382,8 @@
           <div class="row">
             <div class="col-md-12">
               <div class="site-info float-left">
-                <p>&copy; 2018 - Designed by <a href="http://uideck.com" rel="nofollow">UIdeck</a> | Edited by Vinícius Jorge</p>
+                <p>&copy; 2018 - Designed by <a href="http://uideck.com" rel="nofollow">UIdeck</a> | Edited by Vinícius
+                  Jorge</p>
               </div>
               <div class="float-right">
                 <ul class="footer-social">
