--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                   e faça parte dessa comunidade!
                 </p>
               </div>
-              <a href="#" class="btn btn-common btn-effect"><i class="lni-android"></i>Download<br></a>
+              <a href="assets/spotted.apk" class="btn btn-common btn-effect" download><i class="lni-android"></i>Download<br></a>
               <span class="btn btn-apple"><i class="lni-apple"></i> Em Breve<br></span>
             </div>
           </div>
